third revision - fixed img path for like button and crop issue of name on mobile screen

--- a/blocks/card/__like-button/_full/card__like-button_full.css
+++ b/blocks/card/__like-button/_full/card__like-button_full.css
@@ -1,3 +1,9 @@
 .card__like-button_full {
   background: url(../../../../images/likebutton_active.svg) no-repeat;
+  align-self: center;
+  justify-content: flex-end;
+  height: 19px;
+  width: 21px;
+  border: none;
+  flex-shrink: 0;
 }
