--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -19,6 +19,6 @@
 }
 @media screen and (max-width: 320px) {
   .profile__title {
-    max-width: 192px;
+    max-width: 200px;
   }
 }
